--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                   <p class="info"> <em class="date">May 2015-june 2015</em></p>
 
                   <p>
-                 Summer Training to develop a ORDER TO ACTIVATION software for jio sim and product at raliance jio gurgaon.     </p>
+                 Summer Training to develope a JIO:ORDER TO ACTIVATION software for jio sim and product at raliance jio gurgaon.     </p>
 
                </div>
 
@@ -296,6 +296,7 @@
 				   <ul class="skills">
 					   <li><span class="bar-expand python"></span><em>Python</em></li>
                   <li><span class="bar-expand linux"></span><em>linux</em></li>
+                  <li><span class="bar-expand linux"></span><em>App Developmen</em></li>
 						<li><span class="bar-expand webdev"></span><em>Web Development</em></li>
 						<li><span class="bar-expand sql"></span><em>Database ( SQL and NoSQL )</em></li>
 						<li><span class="bar-expand django"></span><em>Django</em></li>
@@ -324,6 +325,7 @@
          <div class="twelve columns collapsed">
 
             <h1>I AM</h1>
+            <p>click on image</p>
 
             <!-- portfolio-wrapper -->
            <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
