--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 				   <ul class="skills">
 					   <li><span class="bar-expand python"></span><em>Python</em></li>
                   <li><span class="bar-expand linux"></span><em>linux</em></li>
-                  <li><span class="bar-expand linux"></span><em>App Developmen</em></li>
+                  <li><span class="bar-expand linux"></span><em>App Development</em></li>
 						<li><span class="bar-expand webdev"></span><em>Web Development</em></li>
 						<li><span class="bar-expand sql"></span><em>Database ( SQL and NoSQL )</em></li>
 						<li><span class="bar-expand django"></span><em>Django</em></li>
