--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="https://goo.gl/tw74RM" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="https://goo.gl/GLiFvr" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
