--- a/index.html
+++ b/index.html
@@ -1,106 +1,75 @@
 <!DOCTYPE html>
-<!--[if lt IE 8 ]><html class="no-js ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="no-js ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 8)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
+<html lang="en">
 <head>
-
-   <!--- Basic Page Needs
-   ================================================== -->
-   <meta charset="utf-8">
-	<title>AJAY BHADU | Cennai based developer and a code geek.</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
-
-   <!-- Mobile Specific Metas
-   ================================================== -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-	<!-- CSS
-    ================================================== -->
-   <link rel="stylesheet" href="css/default.css">
-	<link rel="stylesheet" href="css/layout.css">
-   <link rel="stylesheet" href="css/media-queries.css">
-   <link rel="stylesheet" href="css/magnific-popup.css">
-
-   <!-- Script
-   ================================================== -->
-	<script src="js/modernizr.js"></script>
-
-   <!-- Favicons
-	================================================== -->
-	<link rel="shortcut icon" href="favicon.png" >
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ajay Bhadu | Senior Data Engineer</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
 
-   <!-- Header
-   ================================================== -->
-   <header id="home">
+  <!-- HERO -->
+  <section class="hero">
+    <h1>Ajay Bhadu</h1>
+    <p class="subtitle">
+      Senior Data Engineer • AWS Data Platforms • Spark
+    </p>
+    <p class="tagline">
+      Building reliable, production-grade data platforms with ownership and scale.
+    </p>
+  </section>
 
-      <nav id="nav-wrap">
+  <!-- ABOUT -->
+  <section class="section">
+    <h2>About Me</h2>
+    <p>
+      I am a Senior Data Engineer with 8+ years of experience designing and owning
+      large-scale data platforms across banking, risk, finance, and regulatory domains.
+    </p>
+    <p>
+      My work focuses on reliability, predictable recovery, and reducing operational noise
+      so teams can focus on delivering business value.
+    </p>
+  </section>
 
-         <a class="mobile-btn" href="#nav-wrap" title="Show navigation">Show navigation</a>
-	      <a class="mobile-btn" href="#" title="Hide navigation">Hide navigation</a>
+  <!-- PHILOSOPHY -->
+  <section class="section philosophy">
+    <h2>Engineering Philosophy</h2>
+    <blockquote>
+      “Problem solving fixes incidents.  
+      Leadership prevents them.”
+    </blockquote>
+    <p>
+      Senior data engineering is not about heroics.
+      It is about designing systems that fail gracefully, recover cleanly,
+      and earn long-term trust.
+    </p>
+  </section>
 
-         <ul id="nav" class="nav">
-            <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
-            <li><a class="smoothscroll" href="#about">About</a></li>
-	         <li><a class="smoothscroll" href="#resume">Experience</a></li>
-	         <li><a class="smoothscroll" href="#skill">Skills</a></li>
-            <li><a class="smoothscroll" href="#portfolio">I AM</a></li>
-            <li><a class="smoothscroll" href="#testimonials">My Heroes</a></li>
-            <li><a class="smoothscroll" href="#contact">Contact</a></li>
-         </ul> <!-- end #nav -->
+  <!-- PROJECTS -->
+  <section class="section">
+    <h2>Selected Work</h2>
 
-      </nav> <!-- end #nav-wrap -->
-
-      <div class="row banner">
-         <div class="banner-text">
-            <h1 class="responsive-headline">Hello I'm Ajay .</h1>
-            <h3>I'm a Chennai  based <span>developer </span>, <span>student</span> and <span>code miniac</span> creating awesome and
-            effective cool stuffs and collabarating my work do develop country. Let's <a class="smoothscroll" href="#about">start scrolling</a>
-            and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
-            <hr />
-            <ul class="social">
-               <li><a href="https://goo.gl/TjSvQh"><i class="fa fa-github"></i></a></li>
-               <li><a href="http://goo.gl/QB2zyi"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="https://goo.gl/Li0xHX"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="https://goo.gl/OFGvsn"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="https://goo.gl/i1CtDa"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
-            </ul>
-         </div>
-      </div>
-
-      <p class="scrolldown">
-         <a class="smoothscroll" href="#about"><i class="icon-down-circle"></i></a>
+    <div class="project">
+      <h3>Data Platform Leadership Patterns</h3>
+      <p>
+        A leadership-focused repository demonstrating how to design
+        reliable data platforms, prevent recurring failures,
+        and define clear ownership.
       </p>
+      <a href="https://github.com/ajaybhadu" target="_blank">View on GitHub →</a>
+    </div>
 
-   </header> <!-- Header End -->
+    <div class="project">
+      <h3>AWS Data Engineering (Glue • EMR • Spark)</h3>
+      <p>
+        Examples of scalable ETL pipelines, performance considerations,
+        and cost-aware design decisions in AWS-based data platforms.
+      </p>
+    </div>
 
-
-   <!-- About Section
-   ================================================== -->
-   <section id="about">
-
-      <div class="row">
-
-         <div class="three columns">
-
-            <img class="profile-pic"  src="images/profilepic.jpg" alt="" />
-
-         </div>
-
-         <div class="nine columns main-col">
-
-            <h2>ABOUT ME</h2>
-             <span>"CSE STUDENT & I AM NOT PREPARED BUT MOTIVATED"</span>
-            <p>I mingle with people very easily and have strong interpersonal skills. I come up with creative solutions to challenges in job. I am currently doing my graduation from SRM UNIVERSITY CHENNAI (in computer science)
-.I am a team player and love to be a part of a team. I am working with many teams in my collage in various fields.
- I am always ready to face challenges and get along with people very well. I believe in vision and action. I learn from my mistakes. The tests conducted by you will increase my aptitude and attitude towards job. 
-  I am enjoying everything that I am doing..
+    <div class="project">
+      <h3>Data Quality & Reliability Patterns</  I am enjoying everything that I am doing..
             </p>
 
             <div class="row">
@@ -697,3 +666,4 @@
 </body>
 
 </html>
+
